<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_1"
            android:checked="true"
            android:icon="@drawable/timer"
            android:title="@string/navigation_item_1"/>
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/graph"
            android:title="@string/navigation_item_2" />
        <item
            android:id="@+id/navigation_item_3"
            android:icon="@drawable/plan"
            android:title="@string/navigation_item_3" />


    </group>
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/alarm"
            android:id="@+id/nav_sub_menu_item1"
            android:title="@string/nav_sub_menu_item1" />
        <item
            android:icon="@drawable/language"
            android:id="@+id/nav_sub_menu_item2"
            android:title="@string/nav_sub_menu_item2" />
        <item
            android:icon="@drawable/setting"
            android:id="@+id/nav_sub_menu_item3"
            android:title="@string/nav_sub_menu_item3" />
        <item
            android:icon="@drawable/reset"
            android:id="@+id/nav_sub_menu_item4"
            android:title="@string/nav_sub_menu_item4" />
    </group>

</menu>

